--- a/index.html
+++ b/index.html
@@ -1,202 +1,239 @@
-<!DOCTYPE html><html lang="fr">
+<!DOCTYPE html>
+<html lang="fr">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>OuassVTC - Accueil </title>
+  <title>OuassVTC - Réservation VTC à Perpignan</title>
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f0f2f5;
+      font-family: Arial, sans-serif;
+      background-color: #f5f5f5;
       color: #333;
       margin: 0;
       padding: 0;
     }
     header {
-      background-color: #111;
-      padding: 30px;
+      background-color: #000;
+      padding: 20px;
       text-align: center;
     }
     header img {
-      height: 100px;
+      height: 140px;
+      max-width: 100%;
     }
     .container {
-      max-width: 960px;
-      margin: auto;
       padding: 20px;
+      max-width: 900px;
+      margin: auto;
     }
-    .hero-text {
-      text-align: center;
-      margin-bottom: 30px;
-    }
-    .hero-text h2 {
-      font-size: 2rem;
+    .car-image {
+      width: 100%;
+      max-width: 450px;
+      display: block;
+      margin: 0 auto 20px auto;
     }
     .buttons {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
       gap: 10px;
-      margin: 20px 0;
+      margin-bottom: 20px;
     }
     .buttons a {
-      background-color: #000;
-      color: white;
-      padding: 12px 20px;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: 500;
       display: flex;
       align-items: center;
-      gap: 8px;
-    }
-    .form-section {
-      background: #fff;
-      padding: 25px;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    }
-    input, textarea, select, button {
-      width: 100%;
-      padding: 12px;
-      margin: 10px 0;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      font-size: 16px;
-    }
-    button {
-      background-color: #007bff;
+      gap: 5px;
+      background-color: #000;
       color: white;
+      padding: 10px 15px;
+      border-radius: 5px;
+      text-decoration: none;
+    }
+    .buttons a img {
+      width: 20px;
+      height: 20px;
+    }
+    .info {
+      text-align: center;
       font-weight: bold;
+      margin-bottom: 20px;
+    }
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      max-width: 500px;
+      margin: 20px auto;
+    }
+    input, textarea {
+      padding: 10px;
+      font-size: 16px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      width: 100%;
+    }
+    .localiser-btn {
+      position: absolute;
+      right: 15px;
+      top: 6px;
+      background: none;
       border: none;
       cursor: pointer;
     }
-    button.green {
-      background-color: #28a745;
+    .field-container {
+      position: relative;
     }
-    .confirmation {
+    button {
+      padding: 10px;
+      background-color: #007bff;
+      color: white;
+      font-size: 16px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    .estimation {
       text-align: center;
-      margin-top: 20px;
-      color: green;
       font-weight: bold;
-    }
-    #map {
-      height: 300px;
-      margin-top: 20px;
-      border-radius: 10px;
+      margin-top: 10px;
+      color: green;
     }
     footer {
-      background-color: #111;
+      background-color: #000;
       color: white;
       text-align: center;
-      padding: 20px;
+      padding: 30px 10px;
       margin-top: 40px;
+    }
+    .hidden-keywords {
+      display: none;
+    }
+    @media (max-width: 600px) {
+      .buttons {
+        flex-direction: column;
+        align-items: center;
+      }
+      .buttons a {
+        width: 80%;
+        justify-content: center;
+      }
+    }
+    /* Confirmation popup */
+    .confirmation-popup {
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(0, 0, 0, 0.6);
+      backdrop-filter: blur(3px);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+      animation: fadeIn 0.4s ease-in-out;
+    }
+    .popup-content {
+      background: #ffffff;
+      padding: 30px 20px;
+      border-radius: 16px;
+      text-align: center;
+      font-family: 'Segoe UI', sans-serif;
+      box-shadow: 0 15px 25px rgba(0, 0, 0, 0.25);
+      animation: scaleUp 0.35s ease;
+      max-width: 90%;
+      width: 100%;
+      max-width: 400px;
+    }
+    .popup-content h2 {
+      color: #28a745;
+      margin-bottom: 10px;
+    }
+    .popup-content p {
+      color: #333;
+      margin-bottom: 20px;
+      line-height: 1.5;
+    }
+    .popup-content button {
+      background-color: #007bff;
+      color: white;
+      padding: 12px 24px;
+      border: none;
+      font-size: 16px;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+    .popup-content button:hover {
+      background-color: #0056b3;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; } 
+      to { opacity: 1; }
+    }
+    @keyframes scaleUp {
+      from { transform: scale(0.8); opacity: 0; }
+      to { transform: scale(1); opacity: 1; }
     }
   </style>
 </head>
 <body>
-  <nav style="background:#000; padding:10px 0; text-align:center;">
-  <a href="services.html" style="color:white; margin: 0 15px;">Services</a>
-  <a href="faq.html" style="color:white; margin: 0 15px;">FAQ</a>
-  <a href="qui-sommes-nous.html" style="color:white; margin: 0 15px;">Qui sommes-nous</a>
-  <a href="contact.html" style="color:white; margin: 0 15px;">Contact</a>
-</nav>
-  <header>
-    <img src="ouassvtc.png" alt="Logo OuassVTC" />
-  </header>
-  <div class="container">
-    <div class="hero-text">
-      <h2>Votre chauffeur VTC privé à Perpignan</h2>
-      <p>Un service fiable, sécurisé et confortable, accessible en quelques clics. Réservez votre trajet en toute transparence avec estimation instantanée.</p>
-    </div><div class="buttons">
-  <a href="tel:0644120784">📞 Appeler</a>
-  <a href="https://wa.me/33644120784" target="_blank">💬 WhatsApp</a>
-  <a href="sms:+33644120784">✉️ SMS</a>
-</div>
+  <!-- Le reste du contenu HTML reste identique jusqu'au formulaire -->
+  <!-- Dans ton formulaire, assure-toi que le champ date utilise un label clair ou un placeholder -->
+  <input type="datetime-local" id="dateheure" name="dateheure" required placeholder="Date de la réservation">
+  <!-- Et que le formulaire est bien -->
+  <form onsubmit="sendEmail(event)">...</form>
 
-<div class="form-section">
-  <h3>Réserver une course</h3>
-  <form onsubmit="sendEmail(event)">
-    <input type="text" id="nom" placeholder="Nom" required>
-    <input type="tel" id="telephone" placeholder="Téléphone" required>
-    <input type="text" id="depart" placeholder="Adresse de départ" required>
-    <input type="text" id="arrivee" placeholder="Adresse d'arrivée" required>
-    <label for="dateheure">Date de la réservation</label>
-<input type="datetime-local" id="dateheure" name="dateheure" required />
-    <select id="passagers">
-      <option value="">Nombre de passagers</option>
-      <option value="1">1</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
-    </select>
-    <textarea id="message" placeholder="Informations complémentaires..."></textarea>
-    <div id="prixEstime" class="confirmation">Distance : -- km | Estimation : -- €</div>
-    <button type="button" class="green" onclick="calculerEstimation()">Estimer le tarif</button>
-    <button type="submit">Envoyer la demande</button>
-  </form>
-</div>
-
-<div id="map"></div>
-
-<div id="google_translate_element" style="text-align:center;margin-top:20px;"></div>
-
-  </div>  <footer>
-    © 2025 OuassVTC - Tous droits réservés. Contact : contact@ouassvtc.fr
-  </footer>  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>  <script>
-    function googleTranslateElementInit() {
-      new google.translate.TranslateElement({pageLanguage: 'fr'}, 'google_translate_element');
-    }
-  </script>  <script>
+  <script>
     emailjs.init("U08QGWWRUenJDOllc");
+
     function sendEmail(event) {
       event.preventDefault();
-      const params = {
-        nom: nom.value,
-        telephone: telephone.value,
-        depart: depart.value,
-        arrivee: arrivee.value,
-        dateheure: dateheure.value,
-        passagers: passagers.value,
-        message: message.value,
-        prix: document.getElementById("prixEstime").innerText
-      };
-      emailjs.send("service_kdvgh9f", "template_5xt5vlv", params)
-        .then(() => alert("✅ Votre demande a bien été envoyée."))
-        .catch(() => alert("Erreur d'envoi"));
-    }
-  </script>  <script>
-    let map = L.map('map').setView([42.7, 2.9], 12);
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      attribution: '&copy; OpenStreetMap contributors'
-    }).addTo(map);
-    navigator.geolocation.getCurrentPosition(pos => {
-      const latlng = [pos.coords.latitude, pos.coords.longitude];
-      L.marker(latlng).addTo(map).bindPopup("Vous êtes ici").openPopup();
-      map.setView(latlng, 13);
-    });
-  </script>  <script>
-    function calculerEstimation() {
-      const d = depart.value, a = arrivee.value;
-      if (!d || !a) return alert("Veuillez entrer les adresses");
-      fetch(`https://nominatim.openstreetmap.org/search?q=${encodeURIComponent(d)}&format=json&limit=1`)
-        .then(res => res.json()).then(data1 => {
-        if (!data1.length) throw "Erreur départ";
-        const start = `${data1[0].lon},${data1[0].lat}`;
-        fetch(`https://nominatim.openstreetmap.org/search?q=${encodeURIComponent(a)}&format=json&limit=1`)
-          .then(res => res.json()).then(data2 => {
-          if (!data2.length) throw "Erreur arrivée";
-          const end = `${data2[0].lon},${data2[0].lat}`;
-          fetch(`https://router.project-osrm.org/route/v1/driving/${start};${end}?overview=false`)
-            .then(res => res.json()).then(route => {
-              const dist = route.routes[0].distance / 1000;
-              let prix = 20 + Math.max(0, dist - 7) * 1.6;
-              prixEstime.innerText = `Distance : ${dist.toFixed(1)} km | Estimation : ${prix.toFixed(2)} €`;
-            });
-        });
+      const form = document.querySelector("form");
+      const submitButton = form.querySelector("button[type='submit']");
+      submitButton.disabled = true;
+      submitButton.innerText = "Envoi en cours...";
+
+      const nom = document.getElementById("nom").value;
+      const telephone = document.getElementById("telephone").value;
+      const depart = document.getElementById("depart").value;
+      const arrivee = document.getElementById("arrivee").value;
+      const dateheure = document.getElementById("dateheure").value;
+      const passagers = document.getElementById("passagers").value;
+      const message = document.getElementById("message").value;
+      const prixText = document.getElementById("prixEstime").innerText;
+
+      emailjs.send("service_kdvgh9f", "template_5xt5vlv", {
+        nom, telephone, depart, arrivee, dateheure, passagers, message, prix: prixText
+      }).then(() => {
+        form.reset();
+        document.getElementById("prixEstime").innerText = "";
+        showConfirmationPopup();
+      }).catch(() => {
+        submitButton.disabled = false;
+        submitButton.innerText = "Envoyer la demande";
+        alert("❌ Une erreur est survenue. Veuillez réessayer.");
       });
     }
-  </script></body>
+
+    function showConfirmationPopup() {
+      const popup = document.createElement("div");
+      popup.className = "confirmation-popup";
+      popup.innerHTML = `
+        <div class="popup-content">
+          <h2>✅ Demande envoyée</h2>
+          <p>Merci pour votre réservation.<br>Nous vous contacterons dans les plus brefs délais.</p>
+          <button onclick="closeConfirmationPopup()">Faire une nouvelle demande</button>
+        </div>
+      `;
+      document.body.appendChild(popup);
+    }
+
+    function closeConfirmationPopup() {
+      const popup = document.querySelector(".confirmation-popup");
+      if (popup) popup.remove();
+      const submitButton = document.querySelector("form button[type='submit']");
+      submitButton.disabled = false;
+      submitButton.innerText = "Envoyer la demande";
+    }
+  </script>
+</body>
 </html>
