--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
   <!-- Icônes / couleur appli -->
   <link rel="icon" href="ouassvtc.png" type="image/png">
   <link rel="apple-touch-icon" href="ouassvtc.png">
+  <!-- IMPORTANT pour la PWA -->
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#000000">
 
-  <!-- Google Analytics (déclencher après consentement en production) -->
+  <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-23LLHRH2QL"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -32,21 +33,19 @@
       --bg:#fff;
       --success:#16a34a;
       --radius:14px;
-      --navH:56px; /* sera mis à jour en JS */
+      --navH:56px;
     }
     *{box-sizing:border-box;margin:0;padding:0}
     html{scroll-behavior:smooth}
     body{font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,sans-serif;background:var(--bg);color:#111;line-height:1.4}
 
-    /* --- Header / Nav --- */
     header{background:#000;color:#fff;text-align:center;padding:28px}
-    header img{max-height:120px;inline-size:auto;height:auto;aspect-ratio:auto}
+    header img{max-height:120px;height:auto}
 
     nav#topnav{position:sticky;top:0;z-index:20;display:flex;gap:18px;justify-content:center;padding:12px 10px;background:#fff;border-bottom:1px solid var(--border);backdrop-filter:saturate(180%) blur(8px)}
     nav#topnav a{color:#111;text-decoration:none;font-weight:650;font-size:15px;padding:8px 10px;border-radius:999px}
     nav#topnav a:hover,nav#topnav a:focus-visible{background:#f3f4f6;outline:none}
 
-    /* --- Layout --- */
     .container{max-width:min(1100px,92vw);margin:auto;padding:28px 18px}
     .hero{display:grid;grid-template-columns:1fr;gap:16px;align-items:center}
     .hero-text{text-align:center}
@@ -61,20 +60,22 @@
     }
     .btn-main:hover,.btn-main:focus-visible{opacity:.9;transform:translateY(-2px);outline:none}
 
-    /* --- Contact buttons --- */
-    .contact-buttons{display:grid;grid-template-columns:repeat(3,minmax(0,1fr));gap:12px;align-items:stretch;margin:20px 0 24px}
-    .btn{display:flex;align-items:center;justify-content:center;gap:8px;white-space:nowrap;border:1px solid var(--brand);background:var(--brand);color:#fff;border-radius:999px;padding:12px 10px;font-weight:650;text-decoration:none;text-align:center;transition:transform .25s,opacity .25s;font-size:15px;width:100%;cursor:pointer}
+    .contact-buttons{display:grid;grid-template-columns:repeat(3,minmax(0,1fr));gap:12px;align-items:stretch;margin:20px 0 12px}
+    .btn{
+      display:flex;align-items:center;justify-content:center;gap:8px;white-space:nowrap;
+      border:1px solid var(--brand);background:var(--brand);color:#fff;border-radius:999px;
+      padding:12px 10px;font-weight:650;text-decoration:none;text-align:center;
+      transition:transform .25s,opacity .25s;font-size:15px;width:100%;cursor:pointer
+    }
     .btn:hover,.btn:focus-visible{opacity:.9;transform:translateY(-1px);outline:none}
     .btn:disabled{opacity:.6;cursor:not-allowed}
-
     .btn-light{background:#fff;color:#111;border:1px solid var(--border);box-shadow:0 2px 6px rgba(0,0,0,.06);padding:10px 14px;font-size:14px;border-radius:999px;display:inline-flex}
-    .btn-light:hover,.btn-light:focus-visible{transform:translateY(-1px);outline:none}
 
-    /* --- Estimation: FIXE en haut (sous la nav), largeur alignée au container --- */
+    /* barre estimation */
     .fare-sticky{
       position:fixed;
       top:var(--navH);
-      left:0; right:0;
+      left:0;right:0;
       z-index:50;
       background:#0a0a0a;color:#fff;
       border-radius:0 0 var(--radius) var(--radius);
@@ -84,8 +85,7 @@
       width:min(1100px,92vw);
       margin-inline:auto;
     }
-    body.fare-open{ padding-top:calc(var(--navH) + 82px); }
-
+    body.fare-open{padding-top:calc(var(--navH) + 82px);}
     .fare-row{display:flex;align-items:center;justify-content:space-between;gap:12px}
     .fare-left{display:flex;align-items:center;gap:10px}
     .badge{font-size:12px;font-weight:800;color:#0a0a0a;background:#fff;border-radius:999px;padding:4px 10px}
@@ -102,7 +102,6 @@
 
     #map{height:320px;border-radius:var(--radius);margin-top:20px}
 
-    .success-message{background:#ecfdf5;border:1px solid #bbf7d0;color:#16a34a;padding:14px 16px;border-radius:12px;font-weight:700;text-align:center;margin-top:20px}
     .modal{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,.5);z-index:100;padding:16px}
     .modal.show{display:flex}
     .modal-content{background:#fff;color:#111;width:100%;max-width:420px;border-radius:18px;padding:22px 18px;text-align:center;box-shadow:0 24px 64px rgba(0,0,0,.25)}
@@ -131,9 +130,6 @@
       .hero-text h1{font-size:22px}
       .btn{font-size:14px;padding:12px 8px}
     }
-    @media (prefers-reduced-motion:reduce){
-      *{animation:none !important;transition:none !important;scroll-behavior:auto}
-    }
   </style>
 </head>
 <body>
@@ -141,6 +137,7 @@
     <img src="ouassvtc.png" alt="OuassVTC" loading="eager" width="240" height="120">
   </header>
 
+  <!-- NAV -->
   <nav id="topnav">
     <a href="services.html">Services</a>
     <a href="faq.html">FAQ</a>
@@ -153,15 +150,18 @@
       <div class="hero-text">
         <h1>Chauffeur privé à Perpignan</h1>
         <p>Réservez en quelques secondes — confort et fiabilité.</p>
+
         <div class="main-button">
           <a class="btn btn-main" href="#formResa" onclick="trackEvent('clic_reserver','Réserver maintenant')">📅 Réservez maintenant</a>
         </div>
+
         <div class="contact-buttons" role="group" aria-label="Contact rapide">
           <a class="btn" href="tel:0644120784" onclick="trackEvent('clic_appel','Appeler')">📞 Appeler</a>
           <a class="btn" href="https://wa.me/33644120784" target="_blank" rel="noopener" onclick="trackEvent('clic_whatsapp','WhatsApp')">💬 WhatsApp</a>
           <a class="btn" href="sms:+33644120784" onclick="trackEvent('clic_sms','SMS')">✉️ SMS</a>
         </div>
-        <!-- bouton ajouter l'application -->
+
+        <!-- bouton ajouter l'appli -->
         <div style="display:flex;justify-content:center;margin-top:6px;">
           <button type="button" class="btn" id="btnAddApp" style="background:#fff;color:#000;border:1px solid #000;">
             📱 Ajouter l’application
@@ -169,6 +169,7 @@
         </div>
       </div>
 
+      <!-- bandeau estimation -->
       <aside>
         <div id="fare" class="fare-sticky" aria-live="polite">
           <div class="fare-row">
@@ -187,6 +188,7 @@
 
     <p class="intro">Remplissez le formulaire ci-dessous et envoyez-le pour être recontacté dans les plus brefs délais.</p>
 
+    <!-- FORMULAIRE -->
     <form id="formResa" onsubmit="sendEmail(event)">
       <label for="nom">Nom et prénom</label>
       <input type="text" id="nom" placeholder="Ex. Dupont Pierre" autocomplete="name" required>
@@ -231,6 +233,7 @@
     <h3 style="font-size:16px;font-weight:700;text-align:center;margin-top:20px;margin-bottom:8px;color:#333">🗺️ Visualisez votre itinéraire ci-dessous</h3>
     <div id="map" role="region" aria-label="Carte de l'itinéraire"></div>
 
+    <!-- Coordonnées -->
     <section class="contact-section" style="text-align:center;margin-top:32px;color:#555;font-size:15px">
       <p>📞 <a href="tel:0644120784">06 44 12 07 84</a></p>
       <p>💬 <a href="https://wa.me/33644120784" target="_blank" rel="noopener">WhatsApp</a></p>
@@ -240,15 +243,21 @@
 
   <footer style="background:#000;color:#fff;text-align:center;padding:20px;font-size:13px">© 2025 OuassVTC - Tous droits réservés.</footer>
 
+  <!-- Modale de succès -->
   <div id="successModal" class="modal" role="dialog" aria-labelledby="successTitle" aria-modal="true" aria-hidden="true">
     <div class="modal-content" id="successContent">
       <div class="modal-icon">✅</div>
       <div class="modal-title" id="successTitle">Formulaire bien envoyé</div>
       <div class="modal-text">Nous revenons vers vous rapidement !</div>
       <button type="button" class="btn-light" id="homeBtn">↩️ Revenir à l’accueil</button>
+      <!-- bouton ajouter l'appli dans la modale -->
+      <button type="button" class="btn" id="btnAddAppModal" style="margin-top:10px;">
+        📱 Ajouter l’application
+      </button>
     </div>
   </div>
 
+  <!-- EmailJS -->
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <script>
     emailjs.init("U08QGWWRUenJDOllc");
@@ -279,7 +288,17 @@
       const calc=await calculerEstimation();
       let prixStr="";
       prixStr = (calc && Number.isFinite(calc.prix)) ? `${calc.prix.toFixed(2)} €` : document.getElementById("prixAffiche").textContent || "";
-      const params={nom:nom.value,telephone:telephone.value,depart:depart.value,arrivee:arrivee.value,dateheure:dateheure.value,passagers:passagers.value,paiement:paiement.value,message:message.value,prix:prixStr};
+      const params={
+        nom:nom.value,
+        telephone:telephone.value,
+        depart:depart.value,
+        arrivee:arrivee.value,
+        dateheure:dateheure.value,
+        passagers:passagers.value,
+        paiement:paiement.value,
+        message:message.value,
+        prix:prixStr
+      };
       try{
         await emailjs.send("service_kdvgh9f","template_5xt5vlv",params);
         document.getElementById("formResa").reset();
@@ -296,25 +315,27 @@
         const priceEl=document.getElementById("prixAffiche");
         const detEl=document.getElementById("detailsTrajet");
         if(!d||!a){ openFareBar(); resolve(null); return; }
-        directionsService.route({origin:d,destination:a,travelMode:google.maps.TravelMode.DRIVING},
-        (result,status)=>{
-          if(status==="OK"){
-            directionsRenderer.setDirections(result);
-            const leg=result.routes[0].legs[0];
-            const distKm=leg.distance.value/1000;
-            const duree=leg.duration.text;
-            const prix=+(20+Math.max(0,distKm-7)*1.6).toFixed(2);
-            animatePrice(priceEl,prix);
-            detEl.textContent=`Distance : ${distKm.toFixed(1)} km · Temps : ${duree}`;
-            openFareBar();
-            resolve({prix,distKm,duree});
-          }else{
-            priceEl.textContent="Estimation indisponible";
-            detEl.textContent="";
-            openFareBar();
-            resolve(null);
+        directionsService.route(
+          {origin:d,destination:a,travelMode:google.maps.TravelMode.DRIVING},
+          (result,status)=>{
+            if(status==="OK"){
+              directionsRenderer.setDirections(result);
+              const leg=result.routes[0].legs[0];
+              const distKm=leg.distance.value/1000;
+              const duree=leg.duration.text;
+              const prix=+(20+Math.max(0,distKm-7)*1.6).toFixed(2);
+              animatePrice(priceEl,prix);
+              detEl.textContent=`Distance : ${distKm.toFixed(1)} km · Temps : ${duree}`;
+              openFareBar();
+              resolve({prix,distKm,duree});
+            }else{
+              priceEl.textContent="Estimation indisponible";
+              detEl.textContent="";
+              openFareBar();
+              resolve(null);
+            }
           }
-        });
+        );
       });
     }
 
@@ -336,10 +357,6 @@
       setTimeout(()=>homeBtn.focus(),50);
       modal.addEventListener('click',(e)=>{ if(e.target===modal){hideSuccessModal();} });
       window.addEventListener('keydown',onEscClose);
-      homeBtn.addEventListener('click',()=>{
-        hideSuccessModal();
-        window.scrollTo({top:0,behavior:'smooth'});
-      },{once:true});
     }
 
     function hideSuccessModal(){
@@ -366,36 +383,49 @@
       new google.maps.places.Autocomplete(document.getElementById("arrivee"), acOpts);
     }
 
-    // === PWA : bouton Ajouter l'application + SW ===
+    // === PWA : bouton Ajouter l'application ===
     let deferredPrompt = null;
     window.addEventListener('beforeinstallprompt', (e) => {
       e.preventDefault();
       deferredPrompt = e;
+      console.log('✅ beforeinstallprompt capturé');
     });
+
+    function triggerInstall(){
+      if (deferredPrompt) {
+        deferredPrompt.prompt();
+        deferredPrompt.userChoice.then(() => {
+          deferredPrompt = null;
+        });
+      } else {
+        alert("Pour ajouter l'application :\n• Android : menu ⋮ → Ajouter à l’écran d’accueil\n• iPhone : Partager → Sur l’écran d’accueil");
+      }
+    }
 
     document.addEventListener('DOMContentLoaded', () => {
       const btnAdd = document.getElementById('btnAddApp');
-      if (btnAdd) {
-        btnAdd.addEventListener('click', async () => {
-          if (deferredPrompt) {
-            deferredPrompt.prompt();
-            await deferredPrompt.userChoice;
-            deferredPrompt = null;
-          } else {
-            alert("Pour ajouter l'application :\n• Android : menu ⋮ → Ajouter à l’écran d’accueil\n• iPhone : Partager → Sur l’écran d’accueil");
-          }
-        });
-      }
+      const btnAddModal = document.getElementById('btnAddAppModal');
+      const homeBtn = document.getElementById('homeBtn');
+
+      if (btnAdd) btnAdd.addEventListener('click', triggerInstall);
+      if (btnAddModal) btnAddModal.addEventListener('click', triggerInstall);
+      if (homeBtn) homeBtn.addEventListener('click', () => {
+        hideSuccessModal();
+        window.scrollTo({top:0,behavior:'smooth'});
+      });
     });
 
+    // === Service Worker (version forcée) ===
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
-        navigator.serviceWorker.register('/sw.js')
+        navigator.serviceWorker.register('/sw.js?v=2')
+          .then(() => console.log('✅ Service worker enregistré'))
           .catch(err => console.log('SW error', err));
       });
     }
   </script>
 
+  <!-- Google Maps -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxEs2za_iEs5okAbU3H9fvJm0sRm0oG-A&callback=initMap&libraries=places&loading=async" async defer></script>
 </body>
 </html>
