--- a/index.html
+++ b/index.html
@@ -39,13 +39,39 @@
     html{scroll-behavior:smooth}
     body{font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,sans-serif;background:var(--bg);color:#111;line-height:1.4}
 
-    header{background:#000;color:#fff;text-align:center;padding:28px}
-    header img{max-height:120px;height:auto}
+    /* --- Header --- */
+    header{
+      background:#000;
+      color:#fff;
+      text-align:center;
+      padding:28px;
+    }
+    /* ✅ logo comme avant : pas limité à 120px */
+    header img{
+      display:block;
+      margin:0 auto;
+      width:100%;
+      max-width:400px; /* tu peux monter à 500 si ton image est large */
+      height:auto;
+    }
 
-    nav#topnav{position:sticky;top:0;z-index:20;display:flex;gap:18px;justify-content:center;padding:12px 10px;background:#fff;border-bottom:1px solid var(--border);backdrop-filter:saturate(180%) blur(8px)}
-    nav#topnav a{color:#111;text-decoration:none;font-weight:650;font-size:15px;padding:8px 10px;border-radius:999px}
-    nav#topnav a:hover,nav#topnav a:focus-visible{background:#f3f4f6;outline:none}
+    /* --- Nav --- */
+    nav#topnav{
+      position:sticky;top:0;z-index:20;
+      display:flex;gap:18px;justify-content:center;
+      padding:12px 10px;background:#fff;
+      border-bottom:1px solid var(--border);
+      backdrop-filter:saturate(180%) blur(8px)
+    }
+    nav#topnav a{
+      color:#111;text-decoration:none;font-weight:650;font-size:15px;
+      padding:8px 10px;border-radius:999px
+    }
+    nav#topnav a:hover,nav#topnav a:focus-visible{
+      background:#f3f4f6;outline:none
+    }
 
+    /* --- Layout --- */
     .container{max-width:min(1100px,92vw);margin:auto;padding:28px 18px}
     .hero{display:grid;grid-template-columns:1fr;gap:16px;align-items:center}
     .hero-text{text-align:center}
@@ -60,7 +86,11 @@
     }
     .btn-main:hover,.btn-main:focus-visible{opacity:.9;transform:translateY(-2px);outline:none}
 
-    .contact-buttons{display:grid;grid-template-columns:repeat(3,minmax(0,1fr));gap:12px;align-items:stretch;margin:20px 0 12px}
+    /* --- Contact buttons --- */
+    .contact-buttons{
+      display:grid;grid-template-columns:repeat(3,minmax(0,1fr));
+      gap:12px;align-items:stretch;margin:20px 0 12px
+    }
     .btn{
       display:flex;align-items:center;justify-content:center;gap:8px;white-space:nowrap;
       border:1px solid var(--brand);background:var(--brand);color:#fff;border-radius:999px;
@@ -69,9 +99,13 @@
     }
     .btn:hover,.btn:focus-visible{opacity:.9;transform:translateY(-1px);outline:none}
     .btn:disabled{opacity:.6;cursor:not-allowed}
-    .btn-light{background:#fff;color:#111;border:1px solid var(--border);box-shadow:0 2px 6px rgba(0,0,0,.06);padding:10px 14px;font-size:14px;border-radius:999px;display:inline-flex}
+    .btn-light{
+      background:#fff;color:#111;border:1px solid var(--border);
+      box-shadow:0 2px 6px rgba(0,0,0,.06);padding:10px 14px;
+      font-size:14px;border-radius:999px;display:inline-flex
+    }
 
-    /* barre estimation */
+    /* --- Estimation sticky --- */
     .fare-sticky{
       position:fixed;
       top:var(--navH);
@@ -93,15 +127,22 @@
     .fare-meta{font-size:13px;color:#d1d5db;margin-top:4px}
     .chip{font-size:12px;border:1px solid rgba(255,255,255,.15);padding:6px 10px;border-radius:999px;color:#86efac;border-color:#22c55e}
 
+    /* --- Formulaire --- */
     .intro{text-align:center;font-size:15px;color:#444;font-weight:650;margin:20px 0 10px}
     form label{display:block;font-size:14px;font-weight:650;margin-bottom:6px;margin-top:12px}
-    input,select,textarea{width:100%;padding:14px 12px;border:1px solid var(--border);border-radius:12px;background:#f9f9f9;font-size:16px;transition:border .2s,background .2s}
+    input,select,textarea{
+      width:100%;padding:14px 12px;border:1px solid var(--border);
+      border-radius:12px;background:#f9f9f9;font-size:16px;
+      transition:border .2s,background .2s
+    }
     input:focus,select:focus,textarea:focus{outline:none;border-color:var(--brand);background:#fff}
     textarea{min-height:64px;resize:none}
     .form-buttons{display:flex;flex-direction:column;gap:12px;margin:20px 0 24px}
 
+    /* --- Map --- */
     #map{height:320px;border-radius:var(--radius);margin-top:20px}
 
+    /* --- Modal --- */
     .modal{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,.5);z-index:100;padding:16px}
     .modal.show{display:flex}
     .modal-content{background:#fff;color:#111;width:100%;max-width:420px;border-radius:18px;padding:22px 18px;text-align:center;box-shadow:0 24px 64px rgba(0,0,0,.25)}
@@ -134,7 +175,7 @@
 </head>
 <body>
   <header>
-    <img src="ouassvtc.png" alt="OuassVTC" loading="eager" width="240" height="120">
+    <img src="ouassvtc.png" alt="OuassVTC" loading="eager">
   </header>
 
   <!-- NAV -->
@@ -250,7 +291,6 @@
       <div class="modal-title" id="successTitle">Formulaire bien envoyé</div>
       <div class="modal-text">Nous revenons vers vous rapidement !</div>
       <button type="button" class="btn-light" id="homeBtn">↩️ Revenir à l’accueil</button>
-      <!-- bouton ajouter l'appli dans la modale -->
       <button type="button" class="btn" id="btnAddAppModal" style="margin-top:10px;">
         📱 Ajouter l’application
       </button>
@@ -353,8 +393,7 @@
       modal.classList.add('show');
       modal.setAttribute('aria-hidden','false');
       document.body.style.overflow='hidden';
-      const homeBtn=document.getElementById('homeBtn');
-      setTimeout(()=>homeBtn.focus(),50);
+      setTimeout(()=>document.getElementById('homeBtn').focus(),50);
       modal.addEventListener('click',(e)=>{ if(e.target===modal){hideSuccessModal();} });
       window.addEventListener('keydown',onEscClose);
     }
@@ -374,7 +413,7 @@
     function initMap(){
       map = new google.maps.Map(document.getElementById("map"), {
         zoom: 7,
-        center: {lat:42.6887, lng:2.8948}
+        center: {lat:42.6887, lng:2.8948} // Perpignan
       });
       directionsService = new google.maps.DirectionsService();
       directionsRenderer = new google.maps.DirectionsRenderer({ map });
@@ -415,7 +454,7 @@
       });
     });
 
-    // === Service Worker (version forcée) ===
+    // === Service Worker ===
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
         navigator.serviceWorker.register('/sw.js?v=2')
